// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day render as expense 1`] = `
<DocumentFragment>
  .emotion-6 {
  margin: 0.5em;
  box-shadow: 0 3px 6px #e0e0dc;
}

.emotion-0 {
  background-color: #f4a0a8;
  padding: 0.25em;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #f4a0a86e;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 5px;
  border-top: #fafaf5 2px solid;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  font-size: 0.8em;
  font-weight: 100;
  padding-left: 7px;
  margin-top: 0.25rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  font-size: 1.1em;
  margin-right: 10px;
}

<div
    class="emotion-6"
  >
    <div
      class="emotion-0"
    >
      <span>
        Mon Apr 01 2019
      </span>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-2"
        >
          <span>
            Clothing
          </span>
          <span
            class="emotion-1"
          >
            Some description
          </span>
        </div>
        <div
          class="emotion-3"
        >
          S/ 99
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Day render as income 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 0.5em;
  box-shadow: 0 3px 6px #e0e0dc;
}

.emotion-0 {
  background-color: #87caa657;
  padding: 0.25em;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #87caa62b;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      <span>
        Mon Apr 01 2019
      </span>
    </div>
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;
